--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.1",
+    "dayjs": "^1.11.1",
     "file-saver": "^2.0.5",
     "jwt-decode": "^3.1.2",
     "react": "^17.0.2",
