--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-icons": "^4.3.1",
     "react-pdf": "^5.7.2",
     "react-query": "^3.34.16",
+    "react-responsive": "^9.0.0-beta.8",
     "react-router-dom": "^6.2.2",
     "react-scripts": "^5.0.0",
     "react-select": "^5.3.0",
